test/libsolidity/syntaxTests/functionCalls/int_not_callable.sol
contract C
{
    function f ( ) public {
        var i = ( ( 1 ( 3 ) ) , 2 );
    }
}
// ----
// TypeError: (61-68): Type is not callable
